--- a/Common.blocks/InputBlock/__InputField/InputBlock__InputField.pug
+++ b/Common.blocks/InputBlock/__InputField/InputBlock__InputField.pug
@@ -1,2 +1,2 @@
-mixin InputBlock__InputField(cl, type, placeholder)
-    input(class=cl type=type, placeholder=placeholder)
+mixin InputBlock__InputField()
+    input.InputBlock__InputField&attributes(attributes)
