--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,13 @@
+include ../Common.blocks/DropdownGuests/__Option/DropdownGuests__Option.pug
+include ../Common.blocks/DropdownGuests/DropdownGuests.pug
+include ../Common.blocks/Wrapper/__FacilitiesDropdown/Wrapper__FacilitiesDropdown.pug
+include ../Common.blocks/Wrapper/__DateDropdown/Wrapper__DateDropdown.pug
+include ../Common.blocks/Wrapper/__GuestsDropdown/Wrapper__GuestsDropdown.pug
+include ../Common.blocks/Wrapper/__MasketField/Wrapper__MasketField.pug
+include ../Common.blocks/Dropdown/__Option/Dropdown__Option.pug
+include ../Common.blocks/Dropdown/Dropdown.pug
+include ../Common.blocks/Wrapper/__FormElements/Wrapper__FormElements.pug
+include ../Common.blocks/QuantityBlock/QuantityBlock.pug
 include ../Common.blocks/InputBlock/__Dropdown/InputBlock__Dropdown.pug
 include ../Common.blocks/InputBlock/__WrapperForSelectWithArrow/InputBlock__WrapperForSelectWithArrow.pug
 include ../Common.blocks/InputBlock/__SelectArrow/InputBlock__SelectArrow.pug
@@ -92,80 +102,93 @@ html
         +Container('', 'Container_BgColor_White Container_MarBot_50px Container_Height_1853px')
             +LogoWrapper()
                 +Logo()
-            +Content('', 'Content__WrapperForFormElements')
-                +Wrapper()
-                    +InputBlock()
-                        +InputBlock__Wrapper()
-                            +InputBlock__FieldName('text field')
-                            +InputBlock__FieldDescription('default')
-                        +InputBlock__InputField('InputBlock__InputField InputBlock_Color_Dark25', 'text', 'Email')
-                    +InputBlock()
-                        +InputBlock__Wrapper()
-                            +InputBlock__FieldName('text field')
-                            +InputBlock__FieldDescription('HOVER  /FOCUS')(class='InputBlock_PdTop_3px')
-                        +InputBlock__InputField('InputBlock__InputField InputBlock_Color_Dark75', 'text', 'This is pretty awesome')
-                    +InputBlock()
-                        +InputBlock__Wrapper()
-                            +InputBlock__FieldName('dropdown')
-                            +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_3px')
-                        +InputBlock__WrapperForSelectWithArrow()
-                            +InputBlock__SelectArrow('expand_more')
-                            Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_19px.InputBlock_Color_Dark75
-                                +InputBlock__Option('Сколько гостей', 'selected')
-                                +InputBlock__Option()
-                                +InputBlock__Option()               
-                    +InputBlock()
-                        +InputBlock__Wrapper()
-                            +InputBlock__FieldName('masked text field')
-                            +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_2px')
-                        +InputBlock__InputField('InputBlock__InputField InputBlock_Color_Dark25 InputBlock_MrTop_5px InputBlock_MrBot_37px', 'text', 'ДД.ММ.ГГГГ')
-                    +InputBlock__Wrapper()
+            +Content()
+                +Content__WrapperForFormElements()
+                    +Wrapper()
+                        +InputBlock()(class='Wrapper__FormElements')
+                            +InputBlock__Wrapper()
+                                +InputBlock__FieldName('text field')
+                                +InputBlock__FieldDescription('default')
+                            +InputBlock__InputField()(class='InputBlock_Color_Dark25', type='text', placeholder='Email')
+                        +InputBlock()(class='Wrapper__FormElements')
+                            +InputBlock__Wrapper()
+                                +InputBlock__FieldName('text field')
+                                +InputBlock__FieldDescription('HOVER / FOCUS')(class='InputBlock_PdTop_3px')
+                            +InputBlock__InputField()(class='InputBlock_Color_Dark75', type='text', placeholder='This is pretty awesome')
+                        +InputBlock()(class='Wrapper__GuestsDropdown')
+                            +InputBlock__Wrapper
+                                +InputBlock__FieldName('dropdown')
+                                +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_3px')
+                            Select.DropdownGuests(multiple='multiple', id="DropdownGuests", name='DropdownGuests', size='3')
+                                +DropdownGuests__Option('спальни')(value='bedrooms')
+                                +DropdownGuests__Option('sdfsdfs')(value='dfrooms')
+                                +DropdownGuests__Option('спальни')(value='bdfdfedrooms')
+                            //- +InputBlock__WrapperForSelectWithArrow()
+                            //-     +InputBlock__SelectArrow('expand_more')
+                            //-     Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_Color_Dark75
+                            //-         +InputBlock__Option('Сколько гостей', 'selected')
+                            //-         +InputBlock__Option()
+                            //-         +InputBlock__Option()               
+                        +InputBlock()(class='Wrapper__MasketField')
+                            +InputBlock__Wrapper()
+                                +InputBlock__FieldName('masked text field')
+                                +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_2px')
+                            +InputBlock__InputField()(class='InputBlock_Color_Dark75', type='text', placeholder='ДД.ММ.ГГГГ')                        
+                        +Wrapper__DateDropdown()
+                            +InputBlock()
+                                +InputBlock__Wrapper()
+                                    +InputBlock__FieldName('date dropdown')
+                                +InputBlock__WrapperForSelectWithArrow()
+                                    +InputBlock__SelectArrow('expand_more')
+                                    Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_LetterSpacing_0px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px
+                                        +InputBlock__Option('ДД.ММ.ГГГГ', 'selected')
+                                        +InputBlock__Option()
+                                        +InputBlock__Option()  
+                            +InputBlock()
+                                +InputBlock__Wrapper()
+                                    +InputBlock__FieldName('date dropdown')
+                                +InputBlock__WrapperForSelectWithArrow()
+                                    +InputBlock__SelectArrow('expand_more')
+                                    Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_MrBot_19px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px.InputBlock_MrBot_37px
+                                        +InputBlock__Option('19.08.2019', 'selected')
+                                        +InputBlock__Option()
+                                        +InputBlock__Option()
                         +InputBlock()
                             +InputBlock__Wrapper()
-                                +InputBlock__FieldName('date dropdown')
+                                +InputBlock__FieldName('filter rate dropdown')
                             +InputBlock__WrapperForSelectWithArrow()
                                 +InputBlock__SelectArrow('expand_more')
-                                Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_LetterSpacing_0px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px
-                                    +InputBlock__Option('ДД.ММ.ГГГГ', 'selected')
+                                Select.InputBlock__InputField.InputBlock_Width_266px.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_39px.InputBlock_Color_Dark75
+                                    +InputBlock__Option('19 авг - 23 авг', 'selected')
                                     +InputBlock__Option()
-                                    +InputBlock__Option()  
+                                    +InputBlock__Option() 
                         +InputBlock()
                             +InputBlock__Wrapper()
-                                +InputBlock__FieldName('date dropdown')
+                                +InputBlock__FieldName('subscription text field')
                             +InputBlock__WrapperForSelectWithArrow()
-                                +InputBlock__SelectArrow('expand_more')
-                                Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_MrBot_19px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px.InputBlock_MrBot_37px
-                                    +InputBlock__Option('19.08.2019', 'selected')
+                                +InputBlock__SelectArrow('arrow_forward')
+                                Select.InputBlock__InputField.InputBlock_Width_266px.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_97px.InputBlock_Color_Dark75
+                                    +InputBlock__Option('Email', 'selected')
                                     +InputBlock__Option()
                                     +InputBlock__Option()
-                    +InputBlock()
-                        +InputBlock__Wrapper()
-                            +InputBlock__FieldName('filter rate dropdown')
-                        +InputBlock__WrapperForSelectWithArrow()
-                            +InputBlock__SelectArrow('expand_more')
-                            Select.InputBlock__InputField.InputBlock_Width_266px.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_39px.InputBlock_Color_Dark75
-                                +InputBlock__Option('19 авг - 23 авг', 'selected')
-                                +InputBlock__Option()
-                                +InputBlock__Option() 
-                    +InputBlock()
-                        +InputBlock__Wrapper()
-                            +InputBlock__FieldName('subscription text field')
-                        +InputBlock__WrapperForSelectWithArrow()
-                            +InputBlock__SelectArrow('arrow_forward')
-                            Select.InputBlock__InputField.InputBlock_Width_266px.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_97px.InputBlock_Color_Dark75
-                                +InputBlock__Option('Email', 'selected')
-                                +InputBlock__Option()
-                                +InputBlock__Option()
-                    +InputBlock()           
-                        +InputBlock__Wrapper(class='InputBlock_Width_265px')
-                            +InputBlock__FieldName('dropdown')
-                            +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_3px')
-                        select.InputBlock__Dropdown.InputBlock_Width_265px.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_19px.InputBlock_Color_Dark75(multiple='multiple', id="dropdownFacilities", name='dropdownFacilities', size='3')
-                            +InputBlock__Option('спальни', 'selected')(value='bedrooms')
-                            +InputBlock__Option('кровати', 'selected')(value='beds')                                
-                            +InputBlock__Option('ванные комнаты')(value='bathrooms')                                              
-                +Wrapper()
+                        +InputBlock()(class='Wrapper__FacilitiesDropdown')           
+                            +InputBlock__Wrapper(class='InputBlock_Width_265px')
+                                +InputBlock__FieldName('dropdown')
+                                +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_3px')
+                            select.Dropdown(multiple='multiple', id="dropdownFacilities", name='dropdownFacilities', size='3')
+                                +Dropdown__Option('спальни', 'selected')(value='bedrooms')
+                                +Dropdown__Option('кровати', 'selected')(value='beds')                                
+                                +Dropdown__Option('комнаты')(value='bathrooms')
+                        +InputBlock()(class='Wrapper__FacilitiesDropdown')           
+                            +InputBlock__Wrapper(class='InputBlock_Width_265px')
+                                +InputBlock__FieldName('dropdown')
+                                +InputBlock__FieldDescription('expanded')(class='InputBlock_PdTop_3px')
+                            select.Dropdown(multiple='multiple', id="dropdownFacilitiesExpanded", name='dropdownFacilities', size='3')
+                                +Dropdown__Option('спальни', 'selected')(value='bedrooms')
+                                +Dropdown__Option('кровати', 'selected')(value='beds')                                
+                                +Dropdown__Option('ванные комнаты')(value='bathrooms')                                               
                     +Wrapper()
                         +Wrapper()
+                            +Wrapper()
+                            +Wrapper()
                         +Wrapper()
-                    +Wrapper()
