--- a/pages/index.scss
+++ b/pages/index.scss
@@ -1,3 +1,10 @@
+/*Library.blocks*/
+
+
+
+/*Common.blocks*/
+
+@import '../Common.blocks/Base/Base.scss';
 @import '../Common.blocks/Wrapper/Wrapper';
 @import '../Common.blocks/ColorSwatch/ColorSwatch';
 
@@ -84,3 +91,19 @@
 @import '../Common.blocks/InputBlock/_Width/InputBlock_Width_265px';
 @import '../Common.blocks/InputBlock/_Width/InputBlock_Width_266px';
 
+@import '../Common.blocks/QuantityBlock/QuantityBlock';
+@import '../Common.blocks/QuantityBlock/__IconMinus/QuantityBlock__IconMinus';
+@import '../Common.blocks/QuantityBlock/__IconPlus/QuantityBlock__IconPlus';
+@import '../Common.blocks/QuantityBlock/__IconPlus/QuantityBlock__IconPlus';
+@import '../Common.blocks/QuantityBlock/__Num/QuantityBlock__Num';
+
+@import '../Common.blocks/Wrapper/__FormElements/Wrapper__FormElements';
+@import '../Common.blocks/Dropdown/Dropdown';
+@import '../Common.blocks/Dropdown/__Option/Dropdown__Option';
+@import '../Common.blocks/Wrapper/__MasketField/Wrapper__MasketField';
+@import '../Common.blocks/Wrapper/__GuestsDropdown/Wrapper__GuestsDropdown';
+@import '../Common.blocks/Wrapper/__DateDropdown/Wrapper__DateDropdown';
+@import '../Common.blocks/Wrapper/__DateDropdown/Wrapper__DateDropdown';
+@import '../Common.blocks/Wrapper/__FacilitiesDropdown/Wrapper__FacilitiesDropdown';
+@import '../Common.blocks/DropdownGuests/DropdownGuests';
+@import '../Common.blocks/DropdownGuests/__Option/DropdownGuests__Option';
