--- a/Common.blocks/Content/Content.scss
+++ b/Common.blocks/Content/Content.scss
@@ -1,3 +1,9 @@
 .Content {
   width: 100%;
 }
+
+@media only screen and (min-width: 1440px) and (max-width: 1440px) {
+  .Content {
+    width: auto;
+  }
+}
