--- a/Common.blocks/Dropdown/Dropdown.scss
+++ b/Common.blocks/Dropdown/Dropdown.scss
@@ -1,48 +1,50 @@
 @media only screen  and (max-width: 576px) {
- .InputBlock__InputField {
+ .Dropdown {
 
 }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
- .InputBlock__InputField {
+ .Dropdown {
 
-}
+ }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
- .InputBlock__InputField {
+ .Dropdown {
 
-}
+ }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
- .InputBlock__InputField {
+ .Dropdown {
 
-}
+ }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
- .InputBlock__InputField {
+ .Dropdown {
     display: block;
+    appearance: none;
+    -webkit-appearance: none;
     box-shadow: none;
     border: none;
     box-sizing: border-box;
     border: 1px solid $DarkShade25;
     border-radius: 4px;
-    width: 320px;
+    width: 100%;
     height: 44px;
-    padding: 14px;
-  /*   margin-top: 4px;
-  margin-left: 1px;
-  margin-bottom: 17px; */
+    padding: 12px 14px;
     font-family: Montserrat-Regular, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 18px;
-    letter-spacing: -0.2px;
+    letter-spacing: 0;
     background-color: transparent;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+    color: $DarkShade75;
     &:after {
      border: none;
      box-shadow: none;
@@ -61,14 +63,14 @@
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
- .InputBlock__InputField {
+ .Dropdown {
 
-}
+ }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
- .InputBlock__InputField {
+ .Dropdown {
 
-}
+ }
 }
 
