--- a/Common.blocks/InputBlock/InputBlock.pug
+++ b/Common.blocks/InputBlock/InputBlock.pug
@@ -1,4 +1,4 @@
-mixin InputBlock(cl, content)
-    div.InputBlock(class= cl) #{content}
+mixin InputBlock(content)
+    div.InputBlock&attributes(attributes) #{content}
         if block
             block
