--- a/Common.blocks/Wrapper/__GuestsDropdown/Wrapper__GuestsDropdown.scss
+++ b/Common.blocks/Wrapper/__GuestsDropdown/Wrapper__GuestsDropdown.scss
@@ -1,44 +1,41 @@
-@media only screen  and (max-width: 576px) {
- .InputBlock__Wrapper {
+@media only screen and (max-width: 576px) {
+ .Wrapper__GuestsDropdown {
 
 }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
- .InputBlock__Wrapper {
+ .Wrapper__GuestsDropdown {
 
  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
- .InputBlock__Wrapper {
+ .Wrapper__GuestsDropdown {
 
  }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
- .InputBlock__Wrapper {
+ .Wrapper__GuestsDropdown {
 
  }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
- .InputBlock__Wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-bottom: 4px
+ .Wrapper__GuestsDropdown {
+	padding-bottom: 17px;
  }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
- .InputBlock__Wrapper {
+ .Wrapper__GuestsDropdown {
 
  }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
- .InputBlock__Wrapper {
+ .Wrapper__GuestsDropdown {
 
  }
 }
