dropdown guests without apply button

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -119,10 +119,10 @@ html
                             +InputBlock__Wrapper
                                 +InputBlock__FieldName('dropdown')
                                 +InputBlock__FieldDescription('default')(class='InputBlock_PdTop_3px')
-                            Select.DropdownGuests(multiple='multiple', id="DropdownGuests", name='DropdownGuests', size='3')
-                                +DropdownGuests__Option('спальни')(value='bedrooms')
-                                +DropdownGuests__Option('sdfsdfs')(value='dfrooms')
-                                +DropdownGuests__Option('спальни')(value='bdfdfedrooms')
+                            Select.DropdownGuests(multiple='multiple', id="DropdownGuests", name='ddDropdownGuests', size='3')
+                                +DropdownGuests__Option('взрослые')(value='adults')
+                                +DropdownGuests__Option('дети')(value='children')
+                                +DropdownGuests__Option('младенцы')(value='babies')
                             //- +InputBlock__WrapperForSelectWithArrow()
                             //-     +InputBlock__SelectArrow('expand_more')
                             //-     Select.InputBlock__InputField.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_Color_Dark75
