added button apply and fixed arrow expand_more

--- a/Common.blocks/JqueryMultiselectPlugin/JqueryMultiselectPlugin.css
+++ b/Common.blocks/JqueryMultiselectPlugin/JqueryMultiselectPlugin.css
@@ -8,9 +8,9 @@
   padding: 0px 3px 5px 13px;
 }
 
-.ui-multiselect-header {
+/* .ui-multiselect-header {
   display: none;
-}
+} */
 
 /** 
 * This adds "..." to the end of the string that locate in widget field
