--- a/Common.blocks/DropdownGuests/DropdownGuests.scss
+++ b/Common.blocks/DropdownGuests/DropdownGuests.scss
@@ -60,6 +60,9 @@
      border-color: $DarkShade50;
     }
   }
+  .ui-multiselect-none {
+    visibility: hidden;
+  }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
