--- a/Common.blocks/Base/Variables.scss
+++ b/Common.blocks/Base/Variables.scss
@@ -7,3 +7,5 @@ $DarkShade100: #1F2041;
 $DarkShade75: rgba(31, 32, 65, 0.75);
 $DarkShade50: rgba(31, 32, 65, 0.5);
 $DarkShade25: rgba(31, 32, 65, 0.25);
+
+$colorApplyButtonGuestsDropdown: #BC9CFF;
