--- a/Common.blocks/JqueryMultiselectPlugin/JqueryMultiselectPlugin.css
+++ b/Common.blocks/JqueryMultiselectPlugin/JqueryMultiselectPlugin.css
@@ -1,4 +1,4 @@
-.ui-multiselect-open {
+/* .ui-multiselect-open {
   width: 19px;
   position: relative;
   bottom: 3px;
@@ -8,13 +8,12 @@
   padding: 0px 3px 5px 13px;
 }
 
-/* .ui-multiselect-header {
+.ui-multiselect-header {
   display: none;
-} */
+}
 
-/** 
+* 
 * This adds "..." to the end of the string that locate in widget field
-*/
 
 .ui-multiselect span:last-child {
   white-space: nowrap;
@@ -24,9 +23,9 @@
   width: auto;
 }
 
-/* .ui-multiselect-checkboxes {
+.ui-multiselect-checkboxes {
   padding: 0;
-} */
+}
 
 .ui-multiselect-checkboxes input[type=checkbox] {
   display: none;
@@ -51,14 +50,14 @@
   padding: 5px 0 0 0;
 }
 
-/* .ui-multiselect-checkboxes span {
+.ui-multiselect-checkboxes span {
   order: -1;
   font-family: "Montserrat-bold";
   font-size: 12px;
   line-height: 15px;;
   text-transform: uppercase;
   padding-top: 7px;
-} */
+}
 
 label.ui-corner-all.ui-state-hover {
   background: transparent;
@@ -67,11 +66,11 @@ label.ui-corner-all.ui-state-hover {
   padding: 0;
 }
 
-/* .ui-multiselect-checkboxes input {
+.ui-multiselect-checkboxes input {
   position: static;
   padding: 0 0 4px 0;
 
-} */
+}
 
 .ui-widget input {
   font-size: 12px;
@@ -98,4 +97,4 @@ label.ui-corner-all.ui-state-hover {
   font-size: 18px;
   line-height: 22px;
   font-family: Montserrat-Regular;
-}
+} */
