--- a/pages/index.pug
+++ b/pages/index.pug
@@ -105,14 +105,14 @@ html
             +Content()
                 +Content-WrapperForFormElements()
                     +Wrapper()
-                        +InputBlock()(class='Wrapper-GuestsDropdown')
-                            +InputBlock-Wrapper
-                                +InputBlock-FieldName('dropdown')
-                                +InputBlock-FieldDescription('default')(class='InputBlock_PdTop_3px')
-                            Select.DropdownGuests(multiple='multiple', id="DropdownGuests2", name='DropdownGuests', size='3')
-                                +DropdownGuests-Option('большие')(value='moreThanAdults')
-                                +DropdownGuests-Option('маленькие')(value='moreThanChildren')
-                                +DropdownGuests-Option('очсень маленькие')(value='moreThanBabies')
+                        //- +InputBlock()(class='Wrapper-GuestsDropdown')
+                        //-     +InputBlock-Wrapper
+                        //-         +InputBlock-FieldName('dropdown')
+                        //-         +InputBlock-FieldDescription('default')(class='InputBlock_PdTop_3px')
+                        //-     Select.DropdownGuests(multiple='multiple', id="DropdownGuests2", name='DropdownGuests', size='3')
+                        //-         +DropdownGuests-Option('большие')(value='moreThanAdults')
+                        //-         +DropdownGuests-Option('маленькие')(value='moreThanChildren')
+                        //-         +DropdownGuests-Option('очсень маленькие')(value='moreThanBabies')
                         +InputBlock()(class='Wrapper-FormElements')
                             +InputBlock-Wrapper()
                                 +InputBlock-FieldName('text field')
