project refactoring, renaming files according to React style

--- a/Common.blocks/InputBlock/_MrTop/InputBlock_MrTop_5px.scss
+++ b/Common.blocks/InputBlock/_MrTop/InputBlock_MrTop_5px.scss
@@ -1,41 +1,41 @@
 @media only screen  and (max-width: 576px) {
- .InputBlock_MrTop_5px {
+ .InputBlock_mrTop_5px {
 
 }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
- .InputBlock_MrTop_5px {
+ .InputBlock_mrTop_5px {
 
  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
- .InputBlock_MrTop_5px {
+ .InputBlock_mrTop_5px {
 
  }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
- .InputBlock_MrTop_5px {
+ .InputBlock_mrTop_5px {
 
  }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
- .InputBlock_MrTop_5px {
+ .InputBlock_mrTop_5px {
 	margin-top: 5px;
  }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
- .InputBlock_MrTop_5px {
+ .InputBlock_mrTop_5px {
 
  }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
- .InputBlock_MrTop_5px {
+ .InputBlock_mrTop_5px {
 
  }
 }
