--- a/pages/index.scss
+++ b/pages/index.scss
@@ -101,3 +101,5 @@
 @import '../Common.blocks/Wrapper/-FacilitiesDropdown/Wrapper-FacilitiesDropdown';
 @import '../Common.blocks/DropdownGuests/DropdownGuests';
 @import '../Common.blocks/DropdownGuests/-Option/DropdownGuests-Option';
+
+@import '../Common.blocks/TestBlocks/_Mod/TestBlocks_Mod_val';
