--- a/Common.blocks/InputBlock/_Color/InputBlock_Color_Dark75.scss
+++ b/Common.blocks/InputBlock/_Color/InputBlock_Color_Dark75.scss
@@ -1,41 +1,41 @@
 @media only screen  and (max-width: 576px) {
- .InputBlock_Color_Dark75 {
+ .InputBlock_color_dark75 {
 
 }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
- .InputBlock_Color_Dark75 {
+ .InputBlock_color_dark75 {
 
  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
- .InputBlock_Color_Dark75 {
+ .InputBlock_color_dark75 {
 
  }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
- .InputBlock_Color_Dark75 {
+ .InputBlock_color_dark75 {
 
  }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
- .InputBlock_Color_Dark75 {
+ .InputBlock_color_dark75 {
 	color: $DarkShade75;
  }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
- .InputBlock_Color_Dark75 {
+ .InputBlock_color_dark75 {
 
  }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
- .InputBlock_Color_Dark75 {
+ .InputBlock_color_dark75 {
 
  }
 }
