--- a/Common.blocks/InputBlock/_ExpandMore/InputBlock_ExpandMore.scss
+++ b/Common.blocks/InputBlock/_ExpandMore/InputBlock_ExpandMore.scss
@@ -1,29 +1,29 @@
 @media only screen  and (max-width: 576px) {
- .InputBlock_ExpandMore {
+ .InputBlock_expandMore {
 
 }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
- .InputBlock_ExpandMore {
+ .InputBlock_expandMore {
 
  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
- .InputBlock_ExpandMore {
+ .InputBlock_expandMore {
 
  }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
- .InputBlock_ExpandMore {
+ .InputBlock_expandMore {
 
  }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
- .InputBlock_ExpandMore {
+ .InputBlock_expandMore {
 
 
  }
@@ -31,13 +31,13 @@
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
- .InputBlock_ExpandMore {
+ .InputBlock_expandMore {
 
  }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
- .InputBlock_ExpandMore {
+ .InputBlock_expandMore {
 
  }
 }
