--- a/Common.blocks/InputBlock/_Width/InputBlock_Width_266px.scss
+++ b/Common.blocks/InputBlock/_Width/InputBlock_Width_266px.scss
@@ -1,41 +1,41 @@
 @media only screen  and (max-width: 576px) {
- .InputBlock_Width_266px {
+ .InputBlock_width_266px {
 
 }
 }
 
 @media only screen and (min-width: 577px) and (max-width: 767px) {
- .InputBlock_Width_266px {
+ .InputBlock_width_266px {
 
  }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
- .InputBlock_Width_266px {
+ .InputBlock_width_266px {
 
  }
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1439px) {
- .InputBlock_Width_266px {
+ .InputBlock_width_266px {
 
  }
 }
 
 @media only screen and (min-width: 1440px) and (max-width: 1440px) {
- .InputBlock_Width_266px {
+ .InputBlock_width_266px {
 	width: 266px;
  }
 }
 
 @media only screen and (min-width: 1441px) and (max-width: 1680px) {
- .InputBlock_Width_266px {
+ .InputBlock_width_266px {
 
  }
 }
 
 @media only screen and (min-width: 1681px) and (max-width: 1920px) {
- .InputBlock_Width_266px {
+ .InputBlock_width_266px {
 
  }
 }
